--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:client": "vite build --ssrManifest --outDir dist/client",
+    "build:server": "vite build --ssr builder.jsx --outDir dist/server",
+    "build:full":"npm run build:server && npm run build:client",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^10.9.0",
+    "@childrentime/devcert": "^1.2.8",
+    "aos": "^2.3.4",
+    "compression": "^1.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.22.3"
+    "sirv": "^2.0.4",
+    "typewriter-effect": "^2.21.0",
+    "vike": "^0.4.168",
+    "vitepress": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -29,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-react-ssg": "^0.6.1"
   }
 }
